@@ -1,3 +1,5 @@
+Contributed by AdmiringWorm
+* Euro Truck Simulator 2
 Games to look into: DiRT, The PATH
 =1/5/2013=
 * Atlantis: The Lost Tales
